# Devops-helper-repo---Readme

./: .gitignore  README.md  Repo structure  pyproject.toml  requirements.txt
src/devops_helper/: __init__.py
src/devops_helper/src/devops_helper/: cli.py
src/devops_helper/src/devops_helper/docker/: Dockerfile
src/devops_helper/src/devops_helper/docker/tests/: test_cli.py
src/devops_helper/src/devops_helper/docker/tests/.github/workflows/: ci.yml
src/devops_helper/src/devops_helper/docker/tests/.github/workflows/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE
