[project]
name = "devops-helper"
version = "0.1.0"
description = "Small DevOps toolkit: CLI + Docker + CI"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }


[project.dependencies]
click = "^8.1.7"
pytest = "^7.4.0"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
